# DocsGenerator

./: .gitignore  CMakeLists.txt  CharacterForm.cpp  CharacterForm.h  DocsGenerator  DocsGenerator_qt5  Example.ini  Form.cpp  Form.h  PreviewWorker.cpp  PreviewWorker.h  README.md  Spoiler.cpp  Spoiler.h  ToggleButtonR.cpp  ToggleButtonR.h  icons.qrc  latex_to_mathml.js  main.cpp
